// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test bredcrumb renders correctly empty 1`] = `
<nav
  aria-label="breadcrumb"
  className="chakra-breadcrumb css-0"
>
  <ol
    className="chakra-breadcrumb__list css-70qvj9"
  >
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="/"
      >
        <p
          className="chakra-text css-735bf1"
        >
          Home
        </p>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Test bredcrumb renders correctly lgoin false 1`] = `
<nav
  aria-label="breadcrumb"
  className="chakra-breadcrumb css-0"
>
  <ol
    className="chakra-breadcrumb__list css-70qvj9"
  >
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="/"
      >
        <p
          className="chakra-text css-735bf1"
        >
          Home
        </p>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-735bf1"
        href="/login"
      >
        <p
          className="chakra-text css-hs9m67"
        >
          Login
        </p>
      </a>
    </li>
  </ol>
</nav>
`;

exports[`Test bredcrumb renders correctly patient 1`] = `
<nav
  aria-label="breadcrumb"
  className="chakra-breadcrumb css-0"
>
  <ol
    className="chakra-breadcrumb__list css-70qvj9"
  >
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-0"
        href="/"
      >
        <p
          className="chakra-text css-735bf1"
        >
          Home
        </p>
      </a>
      <span
        className="css-t4q1nq"
        role="presentation"
      >
        /
      </span>
    </li>
    <li
      className="chakra-breadcrumb__list-item css-18biwo"
    >
      <a
        className="chakra-breadcrumb__link css-lalzaa"
        href="/patients/patientId"
      >
        <p
          className="chakra-text css-1wfrv4i"
        >
          Patient-patientId
        </p>
      </a>
    </li>
  </ol>
</nav>
`;
